# tpm2

./: .gitignore  .npmrc.example  Cargo.toml  README.md  SECURITY.md  api.js  index.d.ts  index.js  native.cjs  native.d.ts  package-lock.json  package.json  policy  s0.ctx  s1.ctx  s2.ctx  t0.ctx  t1.ctx  t2.ctx
.cargo/: config.toml
.cursor/rules/: npm-release.mdc
.cursor/skills/npm-release/: SKILL.md
.github/workflows/: CI.yml  release.yml
docs/: RELEASE.md  api-reference.md  getting-started.md  publishing.md  release-checklist.md  roadmap.md  tpm-agent-constraints.example.md  windows-nv-tbs.md  windows-pcp.md
examples/: nv-smoke.mjs  quote-verify.mjs  smoke-test.mjs
npm/darwin-arm64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
pkgconfig/: tss2-esys.pc  tss2-mu.pc  tss2-sys.pc  tss2-tctildr.pc
scripts/: bump-version.mjs  patch-windows-npm-packages.mjs  publish-beta.mjs  publish-release.mjs  release.mjs  spike-setup.sh  verify-package-tarball.mjs  vm-credential-test.sh
spike/: README.md
src/: lib.rs  napi.rs  transport.rs
src/tbs/: ak_blob.rs  codes.rs  commands.rs  credential.rs  device_keys.rs  error.rs  hw_test.rs  keys.rs  linux.rs  make_credential_sw.rs  mod.rs  ncrypt.rs  nv.rs  parse.rs  pcp.rs  pcr.rs  platform.rs  policy_digest.rs  properties.rs  quote.rs  random.rs  rc.rs  read_public.rs  response_buf.rs  seal.rs  session_hmac.rs  wire.rs
src/tpm/: esapi.rs  mod.rs
