[package]
name = "node-tpm2"
version = "0.0.5-beta.0"
edition = "2021"
description = "Native TPM 2.0 for Node (Rust backend)"
license = "Apache-2.0"
repository = "https://github.com/stacks0x/tpm2"

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]
probe-bin = []
esapi = ["dep:tss-esapi"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tbs-probe"
path = "src/bin/tbs-probe.rs"
required-features = ["probe-bin"]

[[bin]]
name = "spike"
path = "src/bin/spike.rs"
required-features = ["esapi"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "async"], optional = true }
napi-derive = { version = "3", optional = true }
thiserror = "2"
sha2 = "0.10"
hmac = "0.12"
rsa = { version = "0.9", features = ["sha2"] }
aes = "0.8"
cfb-mode = "0.8"
rand = "0.8"
tss-esapi = { version = "7.7", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_TpmBaseServices",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
opt-level = 1
